# Zyra-AI-Assistant

./: .gitignore  README.md
zyra-firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
zyra-firmware/main/: CMakeLists.txt  audio_pipeline.c  audio_pipeline.h  audio_streamer.c  audio_streamer.h  display.c  display.h  idf_component.yml  main.c  offline_relay.c  offline_relay.h  offline_speech.c  offline_speech.h  offline_voice.c  offline_voice.h  smart_home_control.c  smart_home_control.h  status_led.c  status_led.h  wakeword_engine.c  wakeword_engine.h  websocket_client.c  websocket_client.h  zyra_config.example.h
zyra-server/: .env.example  config.py  device_registry.json  device_registry.py  ha_service_mapper.py  home_assistant_client.py  intent_router.py  llm.py  main.py  memory.py  registry_intent_router.py  relay_http_client.py  requirements.txt  smart_home.py  smart_home_backends.py  stt.py  test_components.py  test_device_registry.py  test_home_assistant.py  test_registry_intent_router.py  test_registry_live.py  test_tts_api.py  test_websocket.py  tts.py
