idf_component_register(
    SRCS
        "main.c"
        "audio_pipeline.c"
        "audio_streamer.c"
        "websocket_client.c"
        "display.c"
        "smart_home_control.c"
        "offline_voice.c"
        "offline_speech.c"
        "wakeword_engine.c"
        "status_led.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        esp-sr
        esp_websocket_client
        esp_http_client
        esp_driver_i2s
        esp_driver_i2c
        nvs_flash
        esp_wifi
        esp_event
        esp_netif
        freertos
        json
        spiffs
        led_strip
        log
    PRIV_REQUIRES
        esp_timer
)
spiffs_create_partition_image(storage ../spiffs FLASH_IN_PROJECT)
target_link_libraries(${COMPONENT_LIB} PRIVATE m)